--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             font-family: 'Playfair Display', serif;
             color: white;
-            background: url('img/bg.jpg') no-repeat center center/cover;
+            background: url('bg.jpg') no-repeat center center/cover;
             text-align: center;
         }
 
@@ -163,7 +163,7 @@
 <body>
     <header class="header">
         <div class="left">
-            <img src="img/gym.jpg" alt="XYZ Fitness Logo">
+            <img src="gym.jpg" alt="XYZ Fitness Logo">
             <div><strong>XYZ Fitness</strong></div>
         </div>
 
